--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "apme",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Lightweight jsonapi server middleware for express",
   "main": "dist/apme.js",
   "scripts": {
-    "test": "gulp build && mocha dist tests"
+    "test": "gulp build && mocha dist/tests"
   },
   "keywords": [
     "jsonapi",
@@ -13,7 +13,7 @@
   "author": "Roman Ditchuk",
   "license": "ISC",
   "dependencies": {
-    "async-mw": "0.0.2",
+    "async-mw": "0.0.1",
     "tv4": "^1.2.7"
   },
   "engines": {
