--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "async-mw": "0.0.1",
-    "tv4": "^1.2.7"
+    "tv4": "^1.2.7",
+    "uuid": "^2.0.2"
   },
   "engines": {
-    "node" : ">=5"
+    "node": ">=5"
   },
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
