a lot of change

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apme",
   "version": "1.0.0",
   "description": "Lightweight jsonapi server middleware for express",
-  "main": "dist/apme.js",
+  "main": "dist/apme2/index.js",
   "scripts": {
     "test": "gulp build && mocha dist/tests"
   },
@@ -18,21 +18,23 @@
   "license": "ISC",
   "dependencies": {
     "async-mw": "0.0.1",
-    "tv4": "^1.2.7",
-    "uuid": "^2.0.2"
+    "body-parser": "^1.15.2",
+    "joi": "9.0.4",
+    "uuid": "2.0.3"
   },
   "engines": {
     "node": ">=5"
   },
   "devDependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2016-node5": "^1.1.2",
-    "express": "^4.14.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "mocha": "^3.0.2",
-    "request": "^2.74.0"
+    "babel-plugin-transform-object-rest-spread": "6.8.0",
+    "babel-preset-es2016-node5": "1.1.2",
+    "express": "4.14.0",
+    "gulp": "3.9.1",
+    "gulp-babel": "6.1.2",
+    "gulp-sourcemaps": "1.6.0",
+    "mocha": "3.0.2",
+    "request": "2.74.0",
+    "source-map-support": "0.4.2"
   },
   "peerDependencies": {
     "express": ">=4"
