--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apme",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-alpha.1",
   "description": "Jsonapi server middleware for express",
   "main": "dist/apme2/api.js",
   "scripts": {
