--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apme",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0-alpha.2",
   "description": "Jsonapi server middleware for express",
   "main": "dist/apme2/api.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "async-mw": "0.0.1",
     "body-parser": "1.15.2",
     "joi": "9.1.1",
+    "object-hash": "1.1.4",
     "uuid": "2.0.3"
   },
   "engines": {
