--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apme",
-  "version": "1.2.0-alpha.4",
+  "version": "1.3.0-beta",
   "description": "Jsonapi server middleware for express",
   "main": "dist/index.js",
   "scripts": {
