--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "apme",
-  "version": "1.3.0-beta.2",
+  "version": "2.0.0",
   "description": "Jsonapi server middleware for express",
   "main": "dist/index.js",
   "scripts": {
     "build": "gulp build",
-    "test": "mocha dist/tests",
-    "test-cov": "node_modules/.bin/nyc -e .es6 --require babel-core/register --reporter=lcov --reporter=text node_modules/.bin/mocha src/tests/*.es6"
+    "test": "mocha dist/tests"
   },
   "repository": {
     "type": "git",
@@ -28,18 +27,17 @@
     "node": ">=5"
   },
   "devDependencies": {
-    "babel-eslint": "7.1.1",
-    "babel-plugin-transform-object-rest-spread": "6.16.0",
-    "babel-preset-es2016-node5": "1.1.2",
+    "@types/mocha": "2.2.41",
+    "@types/node": "8.0.7",
     "body-parser": "1.15.2",
-    "eslint": "3.17.1",
     "express": "4.14.0",
     "gulp": "3.9.1",
-    "gulp-babel": "6.1.2",
     "gulp-sourcemaps": "2.1.1",
-    "mocha": "3.1.2",
+    "gulp-typescript": "3.1.7",
+    "mocha": "3.4.2",
     "request": "2.75.0",
-    "source-map-support": "0.4.3"
+    "source-map-support": "0.4.3",
+    "typescript": "2.4.1"
   },
   "peerDependencies": {
     "express": ">=4"
