--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "types": "types.d.ts",
   "scripts": {
-    "build": "gulp build",
-    "test": "mocha dist/tests"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
